--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "analyze": "cross-env ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
     "postbuild": "next-sitemap"
@@ -14,14 +15,14 @@
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-mobile-picker": "^1.1.2",
-    "react-time-picker": "^7.0.0"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^10.0.0",
     "typescript": "^5"
   }
 }
